--- a/static/s-css/login.css
+++ b/static/s-css/login.css
@@ -35,8 +35,8 @@
         #username{
             display: block;
             width: 100%;
-            margin-bottom: 20px;
             border: 0;
+            margin-bottom: 10px;
             padding: 10px;
             border-bottom: 1px solid rgb(128, 125, 125);
             font-size: 15px;
@@ -45,6 +45,7 @@
         #password{
             display: block;
             width: 100%;
+            margin-top: 10px;
             margin-bottom: 20px;
             border: 0;
             padding: 10px;
@@ -69,9 +70,14 @@
             border-radius: 3px;
             background-image: linear-gradient(to right, #a6c1ee, #fbc2eb);
             color: black;
+            border: none;
             outline: none;
         }
         #login-btn:hover{
+           color: cornflowerblue;
+            font-size: 14px;
+        }
+        #login-btn:active{
             background-image: linear-gradient(to right, #fbc2eb,#a6c1ee);
         }
         .send-btn{
@@ -108,14 +114,14 @@
             background-color: cornflowerblue;
         }
         .info{
-            color: brown;
-            font-size: large;
+            color: goldenrod;
+            font-size:12px;
         }
         .codefail{
-            color: red;
-            font-size: large;
+            color: goldenrod;
+            font-size: 13px;
         }
         .codefail2{
             color: burlywood;
-            font-size: large;
+            font-size: 13px;
         }
