the 48th commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,11 +24,6 @@
         </p>
         <button class="cha">X</button>
     </div>
-    <!-- <div id="information">
-        <img src="{{ avatars.default() }}">
-        <h1>{{ email }}</h1>
-        <button id="exit">退出登录</button>
-    </div> -->
     <div id="in_city" style="display: none"></div>
     <!-- 组件 -->
     <div class="header ban">
@@ -292,16 +287,16 @@
         showbodys.className = 'show-body0';
         showbodyf.className = 'show-body2';
     });
-    var btn = document.getElementsByClassName('btn')[0];
-    btn.addEventListener('click', function () {
-        location.href = './wait.html';
+    //var btn = document.getElementsByClassName('btn')[0];
+    //btn.addEventListener('click', function () {
+        //location.href = './wait.html';
         //这个路径你改成后端
-    })
-    var pay = document.getElementsByClassName('pay')[0];
-    pay.addEventListener('click', function () {
-        location.href = './settlement.html';
+   //})
+    //var pay = document.getElementsByClassName('pay')[0];
+    //pay.addEventListener('click', function () {
+        //location.href = './settlement.html';
         //这个路径你改成后端
-    })
+    //})
 </script>
 <script src="../static/s-js/index.js"></script>
 </html>
